# cuadra-app

./: .gitignore  .npmrc  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  dagster-down.command  dagster-up.command  dev-down.command  dev-reset.command  dev-sim.command  dev-up.command  doctor.config.json  package.json  pnpm-lock.yaml  save-inspect.command  save-reset.command  turbo.json
apps/api/: .importlinter  README.md  alembic.ini  pyproject.toml
apps/api/evals/: finance_eval.py
apps/api/ingestion/: __init__.py  definitions.py
apps/api/ingestion/save/: assets.py  composition.py  policy_sensor.py  runner.py  sources.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 09526c5ccaca_save_admin_review_b1_data_shape.py  0990d45c068a_save_basket_query_backfill.py  235559f163ab_save_collections.py  23f1d5c67366_save_contador_de_queries_en_el_snapshot_.py  383f4c14de46_save_correlacion_corrida_match_canonico_.py  3c16230fc37b_save_taxonomy_node_classification_terms.py  4933e9cd6bcc_save_category_classification_table_.py  4cb3e311c6a6_insights_normalization_merchant_budget_.py  614e370d452c_save_matching_foundation_pgvector_trgm_.py  631c00a200fb_save_store_product_source_category_.py  846dbc871bfe_save_admin_audit_log_t2.py  986cfadeb758_save_orchestration_policy_global_config_.py  994974fcfb58_insights_schema_ledger.py  a3f7c1e9d8b4_aispace_currency_extra.py  a5b6c7d8e9f0_save_seed_query_store_registry.py  a7b8c9d0e1f2_save_push_token.py  b2c3d4e5f6a7_save_canonical_slug.py  c1d2e3f4a5b6_save_store_product_is_available.py  c73bedb700cf_save_schema_catalogo_precio_scd_4.py  d2e3f4a5b6c7_save_stale_covered_index.py  d4e8f21a9c07_save_canonical_image_display_size.py  d9b8ab9bb88a_save_snapshot_de_metricas_por_corrida_f4.py  df87365ab7ea_identity_schema.py  e3f4a5b6c7d8_save_store_product_source_ref.py  e7a1c9d4b2f0_aispace_user_preference.py  f1a2b3c4d5e6_save_price_alerts.py  f4a5b6c7d8e9_save_normalize_store_product_ean.py
apps/api/seeds/: __main__.py  bootstrap_canonicals.py  category_terms_data.py  classify_live.py  generate_category_terms.py  identity_seed.py  measure_category_signals.py  normalize_sizes.py  save_basket_pilot.py  save_clean.py  save_inspect.py  save_refresh.py  save_seed.py  save_taxonomy_seed.py  trigger_price_drop.py
apps/api/src/: config.py  main.py  observability.py  openapi_dump.py
apps/api/src/api/: composition_root.py  problem_detail.py  router.py
apps/api/src/api/extensions/: security.py
apps/api/tests/: conftest.py  test_config.py  test_health.py
apps/api/tests/ingestion/: test_build_directed_adapter.py  test_composition.py  test_definitions.py  test_progress_recorder.py  test_refresh_queries.py  test_runner.py  test_sources.py
apps/api/tests/integration/: conftest.py  test_identity_repositories.py
(+1018 files in other folders)
