[project]
name = "cuadra-api"
version = "0.1.0"
description = "Cuadra backend — FastAPI + LangGraph (context-first hexagonal)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.137",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "python-multipart>=0.0.9",
    "pyjwt>=2.9",
    # IA / orquestador (Fase 1+)
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain>=0.3",
    "langchain-anthropic>=0.2",
    "langchain-openai>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "import-linter>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
markers = [
    "unit: unitario, sin DB (rápido)",
    "integration: requiere DB (Postgres)",
]
